# agv-perception

./: .gitignore  README.md
agv-perception/: CMakeLists.txt  build.sh  extract_includes.py  package.xml  run.sh
agv-perception/include/: ImageProcessor.hpp  MsgGroup.hpp  MsgManager.hpp  SizedDict.hpp  blocking_queue.hpp  global.hpp  utils.hpp
agv-perception/include/pc-clustering/: ece.hpp
agv-perception/include/sensing/: MsgGroup.hpp  MsgManager.hpp  inference.hpp
agv-perception/include/yolov8/: yolov8.h
agv-perception/src/: ImageProcessor.cpp  MsgGroup.cpp  MsgManager.cpp  main.cpp  utils.cpp
agv-perception/src/pc-clustering/: ece.cpp
agv-perception/src/sensing/: MsgGroup.cpp  MsgManager.cpp  inference.cpp
